fix(css)cards center aligned

--- a/css/style.scss
+++ b/css/style.scss
@@ -306,7 +306,7 @@ right: 25px;
   background-image: linear-gradient(#FF79DA 0%, #9356DC 60%);
     -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-stroke: 1px black;
+  -webkit-text-stroke: 2px black;
 
   transition: all 1.5s; 
  &:hover {
@@ -427,6 +427,7 @@ border: none;
 .card-menu {
   opacity: 0;
   animation: fadeIn 1.8s forwards;
+  transition: all 600ms ease-in-out;
 }
 
 .buttons-entrees .card-menu:nth-of-type(2) {
@@ -502,24 +503,37 @@ width: 100%;
 }
 
 .column-circle-check {
-  display: none;
-  transition: transform 600ms ease-in-out;
+  width: 0;
+  height: 0;
+  transition: all 600ms ease-in-out;
   background-color: #99e2d0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto
 }
 
 
 .card-menu:hover .column-circle-check{
+  transform: scale(3);
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #99e2d0;
   width: 10%;
-  margin: 0;
+  margin: 15px 0 0 0;
   padding: 0;
-
  }
 
+ .card-menu:hover .fa-circle-check{
+display: flex;
+font-weight: 1rem;
+ }
+
+
  .fa-circle-check {
+  display: none;
   background-color: #99e2d0;
   color: white;
   transition: transform 600ms ease-in-out;
@@ -589,8 +603,8 @@ width: 100%;
 .cards-box {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1200px;
+  justify-content: space-around;
+  width: 100%;
    }
 
 .menu-restaurant {
